test/assignError.slq
def foo[n:â„•](){
	x:=vector(n,0:ğ”¹); // error
	x[0]:=H(x[0]); // ok
	return x;
}
